--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -14,4 +14,13 @@ h1 {
     font-style: oblique;
     font-weight: 900;
 
+
+}
+
+div {
+
+    font-family: fantasy;
+    font-size: 100%;
+    font-style: normal;
+    font-weight: 900;
 }
