--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -11,16 +11,13 @@ img {
 h1 {
     font-family: fantasy;
     font-size: 150%;
-    font-style: oblique;
+    font-style: italic;
     font-weight: 900;
-
-
 }
 
 div {
 
     font-family: fantasy;
     font-size: 100%;
-    font-style: normal;
     font-weight: 900;
 }
