--- a/milestone-2/style.css
+++ b/milestone-2/style.css
@@ -1,10 +1,40 @@
 .heater img {
-    width: 19vw;
-    float:left;
-    margin:2rem;
+    width: 160px;
+    height: 200px;
+    margin: 0px 20px 120px 20px;
+    
+
+
 }
-.about-us{
-    backgroud-color: black;
+.jumbotron-fluid {
+    border-radius: 30px;
+    border: red 2px solid;
+    margin:.5em;
+    color:rgb(2, 94, 2);
+
+        
+}
+
+h1{
+    text-align: center;
+    color:rgb(255, 0, 0);
+    text-shadow: rgb(5, 255, 5) 5px 2px;
+
+    font-family:"fantasy";
+
+    font-size: 4em;
+    font-style:"Bold";
+    background-color: #333333;
+    padding: 4rem;
+    
+}
+h1{
+    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");
+    border-radius: 20px;
 
 
+}
+
+body {
+    background-color:green;
 }
