--- a/milestone-2/style.css
+++ b/milestone-2/style.css
@@ -1,9 +1,7 @@
 .heater img {
     width: 160px;
     height: 200px;
-    margin: 0px 20px 120px 20px;
-    
-
+    margin:0px 20px;
 
 }
 .jumbotron-fluid {
@@ -12,29 +10,37 @@
     margin:.5em;
     color:rgb(2, 94, 2);
 
-        
+
 }
 
 h1{
-    text-align: center;
+
     color:rgb(255, 0, 0);
     text-shadow: rgb(5, 255, 5) 5px 2px;
+    /*font-family:piedra;*/
 
-    font-family:"fantasy";
-
-    font-size: 4em;
-    font-style:"Bold";
-    background-color: #333333;
+    images-size:100%;
+    font-size: 3.5em;
+    background-color: green;
     padding: 4rem;
-    
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
 }
 h1{
     background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");
     border-radius: 20px;
+    /*    height:10rem; */
+    opacity: .9;
 
+}
+h1{
+    text-align: center;
+    font-family:"piedra";
 
 }
 
 body {
-    background-color:green;
+    background-color:#fafafa;
 }
+
