--- a/milestone-2/style.css
+++ b/milestone-2/style.css
@@ -1,46 +1,86 @@
-.heater img {
-    width: 160px;
-    height: 200px;
-    margin:0px 20px;
+/*!*header information*!*/
+
+/*h1{*/
+/*    color:rgb(255, 0, 0);*/
+/*    text-shadow: rgb(5, 255, 5) 5px 2px;*/
+/*    !*font-family:piedra;*!*/
+
+/*    images-size:100%;*/
+/*    font-size: 3.5em;*/
+/*    background-color: green;*/
+/*    padding: 4rem;*/
+/*    background-repeat: no-repeat;*/
+/*    background-position: center;*/
+/*    background-attachment: scroll;*/
+/*}*/
+/*h1{*/
+/*    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");*/
+/*    border-radius: 100px;*/
+/*    !*    height:10rem; *!*/
+/*    opacity: .9;*/
+
+/*}*/
+/*h1{*/
+/*    text-align: center;*/
+/*    font-family:"piedra";*/
+
+/*}*/
+
+/*!*logo and about me*!*/
+/*img {*/
+/*    width: 160px;*/
+/*    height: 200px;*/
+/*    margin:0px 20px;*/
+/*}*/
+/*.jumbotron-fluid {*/
+/*    border-radius: 30px;*/
+/*    border: red 2px solid;*/
+/*    margin:.5em;*/
+/*    margin-right:5px;*/
+/*    color:rgb(2, 94, 2);*/
+/*}*/
+
+/*!*carousel with picture*!*/
+
+
+/*!*information of product*!*/
+/*.container {*/
+/*    display:flex;*/
+/*    justify-content:space-evenly*/
+/*}*/
+/*.row {*/
+/*    padding: 2em;*/
+/*}*/
+/*.col{*/
+/*    padding: 1em;*/
+/*}*/
+/*dropdown menu*/
+/*h2 {*/
+/*    font-size:20px*/
+/*}*/
+/*#step1{*/
+/*    color:red;*/
+/*}*/
+/*#step3{*/
+/*    color:green;*/
+/*}*/
+/*maps and location*/
+
+
+/*information email and massage*/
+
+
+
+
+/*body {*/
+/*    background-color:#fafafa;*/
+/*}*/
+/*body{*/
+/*    background-color: aquamarine;*/
+/*}*/
+
+#desktop #mobile{
+    width:180px;
+    height:150px;
 
 }
-.jumbotron-fluid {
-    border-radius: 30px;
-    border: red 2px solid;
-    margin:.5em;
-    color:rgb(2, 94, 2);
-
-
-}
-
-h1{
-
-    color:rgb(255, 0, 0);
-    text-shadow: rgb(5, 255, 5) 5px 2px;
-    /*font-family:piedra;*/
-
-    images-size:100%;
-    font-size: 3.5em;
-    background-color: green;
-    padding: 4rem;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-}
-h1{
-    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");
-    border-radius: 20px;
-    /*    height:10rem; */
-    opacity: .9;
-
-}
-h1{
-    text-align: center;
-    font-family:"piedra";
-
-}
-
-body {
-    background-color:#fafafa;
-}
-
