--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -4,7 +4,7 @@ img {
 }
 
 .resize {
-    width: 300px;
+    width: 200px;
     height: auto;
 }
 
@@ -20,4 +20,17 @@ div {
     font-family: fantasy;
     font-size: 100%;
     font-weight: 900;
+}
+body{
+    background-color:aquamarine;
+}
+p{
+    border-style:double;
+    border-radius:10%;
+    padding:5px;
+}
+ul {
+    border-style:double;
+    border-radius:10%;
+    padding:5px;
 }
