--- a/milestone-2/style.css
+++ b/milestone-2/style.css
@@ -1,86 +1,155 @@
-/*!*header information*!*/
-
-/*h1{*/
-/*    color:rgb(255, 0, 0);*/
-/*    text-shadow: rgb(5, 255, 5) 5px 2px;*/
-/*    !*font-family:piedra;*!*/
-
-/*    images-size:100%;*/
-/*    font-size: 3.5em;*/
-/*    background-color: green;*/
-/*    padding: 4rem;*/
-/*    background-repeat: no-repeat;*/
-/*    background-position: center;*/
-/*    background-attachment: scroll;*/
-/*}*/
-/*h1{*/
-/*    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");*/
-/*    border-radius: 100px;*/
-/*    !*    height:10rem; *!*/
-/*    opacity: .9;*/
-
-/*}*/
-/*h1{*/
-/*    text-align: center;*/
-/*    font-family:"piedra";*/
-
-/*}*/
-
-/*!*logo and about me*!*/
-/*img {*/
-/*    width: 160px;*/
-/*    height: 200px;*/
-/*    margin:0px 20px;*/
-/*}*/
-/*.jumbotron-fluid {*/
-/*    border-radius: 30px;*/
-/*    border: red 2px solid;*/
-/*    margin:.5em;*/
-/*    margin-right:5px;*/
-/*    color:rgb(2, 94, 2);*/
-/*}*/
-
-/*!*carousel with picture*!*/
-
-
-/*!*information of product*!*/
-/*.container {*/
-/*    display:flex;*/
-/*    justify-content:space-evenly*/
-/*}*/
-/*.row {*/
-/*    padding: 2em;*/
-/*}*/
-/*.col{*/
-/*    padding: 1em;*/
-/*}*/
-/*dropdown menu*/
-/*h2 {*/
-/*    font-size:20px*/
-/*}*/
-/*#step1{*/
-/*    color:red;*/
-/*}*/
-/*#step3{*/
-/*    color:green;*/
-/*}*/
-/*maps and location*/
-
-
-/*information email and massage*/
-
-
-
-
-/*body {*/
-/*    background-color:#fafafa;*/
-/*}*/
-/*body{*/
-/*    background-color: aquamarine;*/
-/*}*/
-
-#desktop #mobile{
-    width:180px;
-    height:150px;
+/*!*================header information================*!*/
+.center{
+    text-align: center;
+}
+h1{
+   margin-top:1em;
+    text-shadow: 0 -1px 4px #4e0101, 0 -2px 10px #ff0, 0 -10px 20px #ff8000, 0 -18px 40px #F00;
+    color: #ffffff;
+    background: #333333;
+}
+h1{
+    animation:blinkingText 1.2s infinite;
+    background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTXUb4sxBQLJIlRO43JaN417v5uYv033YRIag&usqp=CAU");
+    border-radius: 10px;
+    text-align: center;
+    font-family:"piedra";
+}
+@keyframes blinkingText{
+    33%{     color: #243b01;    }
+    66%{    color: #8d0000; }
+    100%{   color: #ffffff;    }
+}
+/*!*================carousel with picture================*!*/
+#carousel{
+    margin-top: 5em;
+}
+#birria-taco  {
+    width: 300px;
+    height: 250px;
+}
+#canasta{
+    width: 300px;
+    height: 250px;
+}
+#huarache{
+    width: 300px;
+    height: 250px;
+}
+#asada-tacos{
+    width: 300px;
+    height: 250px;
+}
+/*!*================logo================*!*/
+#logo {
+    width: 200px;
+    height: 250px;
+    margin:5px;
+    display: flex;
+    justify-content:center;
+    webkit-box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    background: #ECEFCF;
+}
+/*!*================about me================*!*/
+.jumbotron-fluid {
+    border-radius: 5px;
+    border: 2px solid lightcoral;
+    background: linear-gradient(-50deg, #ca011d, #a5a4a4, #204701);
+    color:whitesmoke;
+}
+/*!*================carousel with picture================*!*/
+#carousel{
+    margin-top: 5em;
+}
+#birria-taco  {
+    width: 300px;
+    height: 250px;
+}
+#canasta{
+    width: 300px;
+    height: 250px;
+}
+#huarache{
+    width: 300px;
+    height: 250px;
+}
+#asada-tacos{
+    width: 300px;
+    height: 250px;
+}
+/*!*================information of product================*!*/
+#menu{
+    margin-top: .5em;
 
 }
+.col{
+    padding: 1em;
+}
+/*================dropdown menu================*/
+h2 {
+    font-size:20px
+}
+#step1{
+    color: #004500;
+}
+#step3{
+    color: #8b0000;
+}
+/*================maps and location================*/
+#map{
+    margin-top:4em;
+    margin-bottom:1em ;
+
+    padding:1em;
+    width: 370px;
+    height: 350px;
+    webkit-box-shadow: #193500 0 -1px 4px, #26ff00 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    box-shadow: #092f01 0 -1px 4px, #37ff00 0 -2px 10px, #43ff0d 0 -10px 20px, #8bff62 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    background: #ECEFCF;
+}
+#map2{
+    margin-top: 3em;
+    margin-bottom:1em ;
+    padding:1em;
+    width: 370px;
+    height: 350px;
+    webkit-box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 50px 2px 0px 0px rgba(0,0,0,0);
+    background: #ECEFCF;
+}
+/*================ contact information ================*/
+.form-wrapper {
+    padding: 1.33rem;
+}
+label {
+    display: flex;
+    margin: 10px 0 5px 0;
+}
+button {
+    /*background-color: lime;*/
+    padding: 0.5rem 1.5rem;
+    font-weight: bold;
+    font-size: 1rem;
+    /*border: none;*/
+}
+/*================ footer ================*/
+footer {
+    margin-bottom: 1.5em;
+    text-align: center;
+    color:  black;
+    background: linear-gradient(-50deg, #ca011d, #faf7f7, #204701);
+}
+b{
+    text-shadow: 0 -1px 4px #ff0000, 0 -2px 10px #fafaf8, 0 -10px 20px #47941b, 0 -18px 40px #04ff14;
+}
+/*================ background color ================*/
+body{
+    background: linear-gradient(-50deg, #8B0000, #d0c4c4, #204701);
+}
+
+
+
+
+
+
