--- a/public_html/documentation/style.css
+++ b/public_html/documentation/style.css
@@ -30,7 +30,14 @@ p{
     padding:5px;
 }
 ul {
-    border-style:double;
-    border-radius:10%;
-    padding:5px;
+    border-style: double;
+    border-radius: 10%;
+    padding: 5px;
 }
+
+/*}*/
+/*#desktop #mobile{*/
+/*    width:180px;*/
+/*    height:150px;*/
+
+/*}*/
